Catalogos base: Usuarios, Roles, Sucursales,Menus

--- a/public/argon/css/argon.css
+++ b/public/argon/css/argon.css
@@ -15432,7 +15432,7 @@ button.section-darker:focus
 
 .bg-gradient-light
 {
-    background: linear-gradient(87deg, #adb5bd 0, #adaebd 100%) !important;
+    background: linear-gradient(87deg, #cce8ed 0, #1552a1   100%) !important;
 }
 
 .bg-gradient-dark
